packages/svelte/tests/compiler-errors/samples/runes-before-after-update/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'invalid_runes_mode_import',
		message: 'beforeUpdate cannot be used in runes mode'
	}
});
